<resources>
    <string name="app_name">SkyDRM</string>
    <string name="app_chooser">Use a different app.</string>
    <string name="no_app_choose">There is no app to choose.</string>
    <string name="common_ok_uppercase">OK</string>
    <string name="common_cancel_initcap">Cancel</string>
    <string name="wait_share">Sharing&#8230;</string>
    <string name="wait_protect">Protecting&#8230;</string>
    <string name="wait_upload">Uploading&#8230;</string>
    <string name="wait_load">Loading&#160;</string>
    <string name="wait_load_3dots">Loading&#8230;</string>
    <string name="protect">Protect</string>
    <string name="add_email_address">Add an email address</string>
    <string name="common_message">message</string>
    <string name="common_waiting_initcap_3dots">Waiting&#8230;</string>
    <string name="initcap_exit_if_press_again">Press again to exit.</string>
    <string name="c_Ignore">Ignore</string>
    <string name="Decline">Decline</string>
    <string name="c_Loading_with3dots">Loading&#8230;</string>
    <string name="c_Processing_with3dots">Processing&#8230;</string>
    <string name="hint_msg_repo_update_failed">Access failed. Check the status of your network or repository and try again.</string>
    <string name="hint_msg_repo_bind_failed">An error occurred while binding the repository.</string>
    <string name="hint_msg_repoNotExistWhenReauth">This repository does not exist.</string>
    <string name="hint_msg_repoNameInvalid">The repository name is not valid.</string>
    <string name="hint_msg_repoNameTooLong">The repository name is too long.</string>
    <string name="hint_msg_repoNameViolation">The repository name contains illegal special characters.</string>
    <string name="hint_msg_repoNameEdit_error_general">An error occurred while editing this repository name.</string>
    <string name="hint_msg_oauth2_failed">Authentication failed for this repository.</string>
    <string name="hint_msg_password_format">The password must be at least 8 characters long, and contain at least one alphabet, one number and one special character.</string>
    <string name="hint_msg_username_format">The display name cannot contain special characters.</string>
    <string name="hint_msg_require_input_userName">Enter your name.</string>
    <string name="hint_msg_require_input_url">Enter the URL.</string>
    <string name="hint_msg_require_input_password">Enter your password.</string>
    <string name="hint_msg_require_input_current_password">The current password is required.</string>
    <string name="hint_msg_require_input_new_password">The new password is required.</string>
    <string name="hint_msg_mismatch_password">Passwords do not match.</string>
    <string name="hint_msg_session_expired">Your session has expired. You must log in again.</string>
    <string name="hint_msg_ask_delete_repo_in_rms">Do you really want to disconnect this repository?</string>
    <string name="hint_msg_ask_log_out">Do you really want to log out?</string>
    <string name="hint_msg_ask_log_out_when_marking_offline">There is marking offline task,if you login out,it will cancel task,are you sure to log out?</string>
    <string name="hint_msg_ask_clean_cache">Are you sure you want to delete the cached files?</string>
    <string name="hint_msg_deny_protect_nxl_file">The file you selected is already protected.</string>
    <string name="hint_msg_deny_upload_nxl_file_to_project">You are not authorized  to upload a protected file.</string>
    <string name="hint_msg_nxl_invalid_type">The NXL file you are trying to operate is not valid.</string>
    <string name="error_network_unreach_msg">Network connection is required to perform this operation.</string>
    <string name="hing_msg_create_folder_failed">An error occurred while creating the folder.</string>
    <string name="hint_msg_download_file_failed">An error occurred while downloading the file.</string>
    <string name="hint_msg_steward_tip">As the file owner, you have all rights to this file. Here are the rights granted to other users:</string>
    <string name="hint_msg_show_log_not_steward_failed">Only the file owner can check the activity log.</string>
    <string name="hint_msg_nxl_not_granted_rights">You have not been granted any rights.</string>
    <string name="hint_msg_enter_email_requires">Add email address</string>
    <string name="hint_msg_share_myvault_file">Add a message to be included in the notification email.</string>
    <string name="hint_msg_upload_file_maxsize_limit">The file exceeds the maximum allowed size for upload (150MB). Reduce the file size or select a different file.</string>
    <string name="hint_msg_valid_period">The validity period of the file is incorrectly defined. Specify it in \'Preference\' settings.</string>
    <string name="hint_the_url_is_empty">The URL is empty.</string>
    <string name="hint_the_url_format_is_invalid">The URL format is invalid.</string>
    <string name="hint_the_url_is_not_changed">The URL is not changed.</string>
    <string name="hint_msg_delete_url">Do you really want to delete the URL?</string>
    <string name="hint_msg_delete_url_deny">Changes should be saved firstly,then can remove it.</string>
    <string name="hint_the_url_existed">The URL already exists.</string>
    <string name="hint_msg_repo_bind_exists">Repository already exists.</string>
    <string name="hint_msg_share_file_expired">The file you are sharing is expired.</string>
    <string name="hint_msg_no_rights_found">No rights found according to the given classification.</string>
    <string name="hint_msg_no_rights_evaluated">No permissions determined by centralized policies.</string>
    <string name="hint_msg_already_a_protected_file">The file you have selected is already protected.</string>
    <string name="hint_create_folder_rules">The name should not exceed 50 characters or contain any special characters</string>
    <string name="hint_msg_delete_file">Are you sure to delete file: %s ?</string>
    <string name="hint_msg_delete_folder">Are you sure to delete folder: %s ? </string>
    <string name="hint_msg_get_repo_info_failed">An error occurred while updating the repository information.</string>
    <string name="excep_nxl_rights_expired">The file rights protection has expired.</string>
    <string name="excep_not_nxl_file">This is not an NXL file.</string>
    <string name="excep_token_access_deny">You are not authorized to view this file.</string>
    <string name="excep_token_access_deny_offline">You are not authorized to access this file.</string>
    <string name="excep_no_share_right">You are not granted to share this file.</string>
    <string name="excep_file_not_find">The file is not found.</string>
    <string name="excep_invalid_name">The project name is too long or contains illegal characters.</string>
    <string name="excep_invalid_description">The project description Too Long.</string>
    <string name="excep_project_already_exist">The project name already exists.</string>
    <string name="excep_network_unavailable">Network connection is unavailable. Try again later.</string>
    <string name="excep_export_google_file">The Google file is too large to be exported.</string>
    <string name="excep_operation_failed">The operation failed.</string>
    <string name="excep_download_failed">Downloading failed.</string>
    <string name="excep_folder_name">Invalid folder name.</string>
    <string name="excep_folder_existed">The folder already exists.</string>
    <string name="excep_invitation_expired">The invitation has expired.</string>
    <string name="excep_invitation_declined">The invitation was already declined.</string>
    <string name="excep_invitation_accepted">The invitation was already accepted.</string>
    <string name="email_address_mismatch">The email address does not match.</string>
    <string name="excep_invitation_revoked">The invitation was already revoked.</string>
    <string name="excep_forbidden">The operation failed. You might have been removed from the project.</string>
    <string name="excep_share_link_denied_access">You are not authorized to view this file.</string>
    <string name="excep_file_existed">A file with the same name already exists in the current folder.</string>
    <string name="excep_storage_exceed">The drive storage limit was exceeded.</string>
    <string name="excep_not_granted_share_rights">You are not authorized to share this file.</string>
    <string name="excep_file_name_too_long">This file name is too long. The file name must be less than 128 characters.</string>
    <string name="excep_offline_token_expired">Current offline file is expired,do you want to refresh it?</string>
    <string name="err_excpt_cache_file_create">Cannot create a cache file in the SD card.</string>
    <string name="err_excpt_cache_dir_create">Cannot create a cache directory in the SD card.</string>
    <string name="err_excpt_local_repo_invalid_mount_point">The mount point is null.</string>
    <string name="err_excpt_local_repo_invalid_service_param">Invalid service parameter.</string>
    <string name="err_excpt_local_repo_service_supported">This service type is not supported.</string>
    <string name="err_excpt_local_repo_install">Cannot install this repository.</string>
    <string name="err_reshare_revoked_file">Rights to this file have been revoked for all users.</string>
    <string name="name_sharepoint">SharePoint</string>
    <string name="ss">SS</string>
    <string name="sm">SM</string>
    <string name="hl">HL</string>
    <string name="fr">FR</string>
    <string name="share">Share</string>
    <string name="files">Files</string>
    <string name="project">Project</string>
    <string name="Members">Members</string>
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_files">Files</string>
    <string name="navigation_item_myDrive">MyDrive</string>
    <string name="navigation_item_myVault">MyVault</string>
    <string name="navigation_item_all_files">All Files</string>
    <string name="navigation_item_projects">Projects</string>
    <string name="navigation_item_workspace">WorkSpace</string>
    <string name="view_file">View file</string>
    <string name="view_file_info">View file info</string>
    <string name="summary">Summary</string>
    <string name="Make_as_favorite">Mark as favorite</string>
    <string name="Make_available_offline">Make available offline</string>
    <string name="z_to_a">Z to A</string>
    <string name="a_to_z">A to Z</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="sort_by">Sort by</string>
    <string name="repository">Repository</string>
    <string name="page1_Work_securely_in_a_team">Work securely in a team</string>
    <string name="page1_without_worrying_about">without worrying about</string>
    <string name="page1_leakage_of_intellectual">leakage of intellectual</string>
    <string name="page1_property_and_trade_secret">property and trade secret.</string>
    <string name="Configuration">Configuration</string>
    <string name="cancel">Cancel</string>
    <string name="company_defined_rights">Company-defined rights</string>
    <string name="company_defined_rights_description">Company-defined rights are permissions determined by centralized policies</string>
    <string name="next">Next</string>
    <string name="prompt_sharepoint_url">SharePoint Site URL</string>
    <string name="prompt_domain_username">Domain/username</string>
    <string name="prompt_password_case">Password</string>
    <string name="prompt_connect_sharepoint">Provide your SharePoint credentials to connect</string>
    <string name="txt_add_account">Add account</string>
    <string name="no_tag_selected">No tag selected</string>
    <string name="name_workspace">@string/navigation_item_workspace</string>
    <string name="users">User(s)</string>
</resources>