<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/icon_back_3"
        app:title="@string/name_sharepoint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F3F5"
        android:paddingBottom="8dp"
        android:paddingEnd="5dp"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:text="@string/prompt_connect_sharepoint"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        app:errorEnabled="true">

        <com.skydrm.rmc.ui.widget.ClearableEditText
            android:id="@+id/cet_site_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="@string/prompt_sharepoint_url"
            android:imeOptions="flagNoExtractUi"
            android:labelFor="@+id/cet_site_url"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:errorEnabled="true">

        <com.skydrm.rmc.ui.widget.ClearableEditText
            android:id="@+id/cet_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="@string/prompt_domain_username"
            android:imeOptions="flagNoExtractUi"
            android:labelFor="@+id/cet_username"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="false">

        <com.skydrm.rmc.ui.widget.ClearableEditText
            android:id="@+id/cet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="@string/prompt_password_case"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:labelFor="@+id/cet_password"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_add_account"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/signup_button_background_2"
        android:paddingEnd="@dimen/dp48"
        android:paddingStart="@dimen/dp48"
        android:text="@string/txt_add_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>