<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/simpleShadowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp"
        android:onClick="toolbarButtonPressed"
        android:text="@string/ss"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/smoothButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/simpleShadowButton"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:onClick="toolbarButtonPressed"
        android:text="@string/sm"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hiddenLineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/smoothButton"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:onClick="toolbarButtonPressed"
        android:text="@string/hl"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/frameRateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/hiddenLineButton"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:onClick="toolbarButtonPressed"
        android:text="@string/fr"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />


</RelativeLayout>