<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="2dp"
        android:background="@android:color/white"
        android:elevation="1dp"
        app:navigationIcon="@drawable/icon_back_3"
        app:title="@string/share"
        app:titleTextColor="@android:color/black">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:text="@string/cancel"
            android:textColor="@color/dark_blue" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="Share a protected file with"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_project_site"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="2dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/icon_drawer_projects"
        android:drawablePadding="15dp"
        android:elevation="1dp"
        android:gravity="start|center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/project"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_user_site"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="2dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/icon_drawer_projects"
        android:drawablePadding="15dp"
        android:elevation="1dp"
        android:gravity="start|center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/users"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_workspace_site"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="2dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/icon_drawer_workspace"
        android:drawablePadding="10dp"
        android:elevation="1dp"
        android:gravity="start|center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/name_workspace"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_common_imagebutton_2"
            android:minHeight="50dp"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>