<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp70"
        android:layout_marginEnd="@dimen/dp30"
        android:layout_marginStart="@dimen/dp30"
        android:src="@drawable/splash_new_project_skydrm_group_log3" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dp3"
        android:gravity="center"
        android:text="@string/page1_Work_securely_in_a_team"
        android:textColor="@color/green_light"
        android:textSize="@dimen/text_size_21sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_margin="@dimen/dp3"
        android:gravity="center"
        android:text="@string/page1_without_worrying_about"
        android:textColor="@color/Black"
        android:textSize="@dimen/text_size_21sp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_margin="@dimen/dp3"
        android:gravity="center"
        android:text="@string/page1_leakage_of_intellectual"
        android:textColor="@color/Black"
        android:textSize="@dimen/text_size_21sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv3"
        android:layout_margin="@dimen/dp3"
        android:gravity="center"
        android:text="@string/page1_property_and_trade_secret"
        android:textColor="@color/Black"
        android:textSize="@dimen/text_size_21sp" />

</RelativeLayout>